--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,21 +1,40 @@
 <header class="p-3 text-bg-dark">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <h3>Pakhi Bhai</h3>
+  <div class="container">
+    <div
+      class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
+    >
+      <h3>Pakhi Bhai</h3>
 
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 text-white">Matches</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Lists</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Message</a></li>
-            </ul>
+      <ul
+        class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
+      >
+        <li><a href="#" class="nav-link px-2 text-white">Matches</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Lists</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Message</a></li>
+      </ul>
 
-            <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="User Name" >
-                <input class="form-control me-2" type="password" placeholder="Password" >
-                <button class="btn btn-outline-success" type="submit">Login</button>
-            </form>
-
-
-        </div>
+      <form
+        #loginForm="ngForm"
+        class="d-flex"
+        (ngSubmit)="login()"
+        autocomplete="off"
+      >
+        <input
+          name="username"
+          [(ngModel)]="model.username"
+          class="form-control me-2"
+          type="text"
+          placeholder="User Name"
+        />
+        <input
+          name="password"
+          [(ngModel)]="model.password"
+          class="form-control me-2"
+          type="password"
+          placeholder="Password"
+        />
+        <button class="btn btn-outline-success" type="submit">Login</button>
+      </form>
     </div>
+  </div>
 </header>
