--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -11,16 +11,11 @@
         <li><a href="#" class="nav-link px-2 text-white">Matches</a></li>
         <li><a href="#" class="nav-link px-2 text-white">Lists</a></li>
         <li><a href="#" class="nav-link px-2 text-white">Message</a></li>
-        <li>
-          <a href="" class="nav-link px-2 text-white" (click)="logOut()"
-            >Logout</a
-          >
-        </li>
       </ul>
 
-      <div class="dropdown" *ngIf="loggedIn">
-        <a class="dropdown-toggle text-light">Wellcome User</a>
-        <div class="dropdown-menu">
+      <div class="dropdown" *ngIf="loggedIn" dropdown>
+        <a class="dropdown-toggle text-light" dropdownToggle>Wellcome User</a>
+        <div class="dropdown-menu" *dropdownMenu>
           <a href="" class="dropdown-item">Edit Profile</a>
           <a href="" class="dropdown-item" (click)="logOut()">Logout</a>
         </div>
