choose lifepartner dropdown added

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -26,4 +26,15 @@
       Cancel
     </button>
   </div>
+  <div class="mb-3 custom-select-container">
+    <label for="partnerSelect">Choose your life partner:</label>
+    <select class="form-select" id="partnerSelect">
+      <option
+        *ngFor="let user of usersFromHomeComponent"
+        [value]="user.userName"
+      >
+        {{ user.userName }}
+      </option>
+    </select>
+  </div>
 </form>
