--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -36,10 +36,12 @@
 
       <div
         class="dropdown"
-        *ngIf="accountService.currentUser$ | async"
+        *ngIf="accountService.currentUser$ | async as user"
         dropdown
       >
-        <a class="dropdown-toggle text-light" dropdownToggle>Wellcome User</a>
+        <a class="dropdown-toggle text-light" dropdownToggle
+          >Wellcome {{ user.userName | titlecase }}</a
+        >
         <div class="dropdown-menu" *dropdownMenu>
           <a href="" class="dropdown-item">Edit Profile</a>
           <a href="" class="dropdown-item" (click)="logOut()">Logout</a>
