Members list added

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -26,7 +26,7 @@
       Cancel
     </button>
   </div>
-  <div class="mb-3 custom-select-container">
+  <!-- <div class="mb-3 custom-select-container">
     <label for="partnerSelect">Choose your life partner:</label>
     <select class="form-select" id="partnerSelect">
       <option
@@ -36,5 +36,5 @@
         {{ user.userName }}
       </option>
     </select>
-  </div>
+  </div> -->
 </form>
