--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,1 +1,6 @@
-<p>member-list works!</p>
+<h1>Hello from Member List</h1>
+<div class="row">
+  <div class="col-2" *ngFor="let member of members">
+    <app-member-card [member]="member"></app-member-card>
+  </div>
+</div>
