--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -44,9 +44,13 @@
         <h4>Interests</h4>
         <p>{{ member.interests }}</p>
       </tab>
-      <!-- <tab heading="Photos" #photoTab="tab">
-                <gallery *ngIf="photoTab.active" [items]="images" class="gallery"></gallery>
-            </tab> -->
+      <tab heading="Photos" #photoTab="tab">
+        <gallery
+          *ngIf="photoTab.active"
+          [items]="images"
+          class="gallery"
+        ></gallery>
+      </tab>
       <tab heading="Messages">
         <p>Messages will go here</p>
       </tab>
