member edit page added

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -43,8 +43,8 @@
           >Wellcome {{ user.userName | titlecase }}</a
         >
         <div class="dropdown-menu" *dropdownMenu>
-          <a href="" class="dropdown-item">Edit Profile</a>
-          <a href="" class="dropdown-item" (click)="logOut()">Logout</a>
+          <a routerLink="member/edit" class="dropdown-item">Edit Profile</a>
+          <a class="dropdown-item" (click)="logOut()">Logout</a>
         </div>
       </div>
       <!-- Login Form -->
