--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,13 +1,12 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
   <h2 class="text-center text-primary">Sign up</h2>
   <hr />
   <div class="mb-3">
     <input
       type="text"
       class="form-control"
-      name="username"
-      [(ngModel)]="model.username"
-      placeholder="Username"
+      formControlName="userName"
+      placeholder="User Name"
     />
   </div>
 
@@ -15,9 +14,16 @@
     <input
       type="password"
       class="form-control"
-      name="password"
-      [(ngModel)]="model.password"
+      formControlName="password"
       placeholder="Password"
+    />
+  </div>
+  <div class="mb-3">
+    <input
+      type="password"
+      class="form-control"
+      formControlName="confirmPassword"
+      placeholder="Confirm Password"
     />
   </div>
   <div class="form-group text-center">
@@ -38,3 +44,6 @@
     </select>
   </div> -->
 </form>
+
+<!-- <p>Form value : {{ registerForm.value | json }}</p>
+<p>Form status: {{ registerForm.status }}</p> -->
