--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,75 +1,21 @@
 <form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
   <h2 class="text-center text-primary">Sign up</h2>
   <hr />
-  <div class="mb-3">
-    <input
-      type="text"
-      [class.is-invalid]="
-        registerForm.get('userName')?.errors &&
-        registerForm.get('userName')?.touched
-      "
-      class="form-control"
-      formControlName="userName"
-      placeholder="User Name"
-    />
-    <div class="invalid-feedback">Please enter a User Name</div>
-  </div>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['userName'])"
+    [label]="'User Name'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['password'])"
+    [label]="'Password'"
+    [type]="'password'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['confirmPassword'])"
+    [label]="'Confirm Password'"
+    [type]="'password'"
+  ></app-text-input>
 
-  <div class="mb-3">
-    <input
-      type="password"
-      [class.is-invalid]="
-        registerForm.get('password')?.errors &&
-        registerForm.get('password')?.touched
-      "
-      class="form-control"
-      formControlName="password"
-      placeholder="Password"
-    />
-    <div
-      class="invalid-feedback"
-      *ngIf="registerForm.get('password')?.hasError('required')"
-    >
-      Please Enter a valid Password
-    </div>
-    <div
-      class="invalid-feedback"
-      *ngIf="registerForm.get('password')?.hasError('minlength')"
-    >
-      Password should be more than 4 charecters
-    </div>
-    <div
-      class="invalid-feedback"
-      *ngIf="registerForm.get('password')?.hasError('maxlength')"
-    >
-      Password should be less than 32 charecters
-    </div>
-  </div>
-  <div class="mb-3">
-    <input
-      type="password"
-      [class.is-invalid]="
-        registerForm.get('confirmPassword')?.errors &&
-        registerForm.get('confirmPassword')?.touched
-      "
-      class="form-control"
-      formControlName="confirmPassword"
-      placeholder="Confirm Password"
-    />
-
-    <div
-      class="invalid-feedback"
-      *ngIf="registerForm.get('confirmPassword')?.hasError('required')"
-    >
-      Please Enter a valid confirmation Password
-    </div>
-    <div
-      class="invalid-feedback"
-      *ngIf="registerForm.get('confirmPassword')?.hasError('notMatching')"
-    >
-      Password should be same.
-    </div>
-  </div>
   <div class="form-group text-center">
     <button class="btn btn-success me-2" type="submit">Register</button>
     <button class="btn btn-default me-2" (click)="cancel()" type="button">
@@ -89,5 +35,5 @@
   </div> -->
 </form>
 
-<!-- <p>Form value : {{ registerForm.value | json }}</p>
-<p>Form status: {{ registerForm.status }}</p> -->
+<p>Form value : {{ registerForm.value | json }}</p>
+<p>Form status: {{ registerForm.status }}</p>
