Pagination not complite

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -40,7 +40,7 @@
         dropdown
       >
         <a class="dropdown-toggle text-light" dropdownToggle
-          >Wellcome {{ user.userName | titlecase }}</a
+          >Wellcome {{ user.knownAs }}</a
         >
         <div class="dropdown-menu" *dropdownMenu>
           <a routerLink="member/edit" class="dropdown-item">Edit Profile</a>
