--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="!registerMode" style="text-align: center">
     <div class="container">
       <div class="jumbotron">
-        <h1>Find Your Match</h1>
+        <h1>Find Your Life Partner</h1>
         <p class="lead">
           Come on in to view your matches... all you need to do is sign up!
         </p>
